[package]
name = "xenobalanus"
version = "0.1.3"
edition = "2021"

[lib]
name = "xenobalanus"

[features]
default = ["three-d"]
three-d = ["dep:simple_delaunay_lib"]

[dependencies]
delaunator = "1.0.2"
geo = "0.28.0"
geo-types = "0.7.13"
itertools = "0.12.1"
rand = "0.8.5"
rayon = "1.9.0"
statrs = "0.16.0"
simple_delaunay_lib = { version = "0.2.0", git = "https://github.com/ibujah/simple_delaunay_lib", optional = true }