[package]
name = "xenobalanus"
version = "0.1.3"
edition = "2021"
authors = ["Tobias Raayoni Last  <tobias@randonauts.com>"]
repository = "https://github.com/randogoth/xenobalanus"
readme = "readme.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["dtscan", "dbscan", "delfin", "cluster", "void", "delaunay", "astronomy", "attractor"]
categories = ["algorithms", "science", "mathematics"]

[lib]
name = "xenobalanus"

[dependencies]
delaunator = "1.0.2"
geo = "0.28.0"
geo-types = "0.7.13"
itertools = "0.12.1"
rand = "0.8.5"
rayon = "1.9.0"
statrs = "0.16.0"
